--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc", 
-    "start": "node dist/index.js",  
-    "dev": "ts-node-dev --respawn --transpileOnly src/index.ts"  
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
