--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   },
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "firebase-admin": "^13.0.2",
+    "google-auth-library": "^9.15.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9"
   }
 }
