--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "google-auth-library": "^9.15.0",
     "mysql": "^2.18.1",
