--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -28,6 +29,7 @@
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "google-auth-library": "^9.15.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9"
